# fun_fact

./: README.md  pyproject.toml
src/funfact/: main.py
