[project]
name = "funfact"
version = "0.1.0"
description = "funfact using crewAI"
authors = [{ name = "M A Qadir", email = "aqadir100@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
]

[project.scripts]
kickoff = "funfact.main:flow.kickoff"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
